# chem

./: .gitignore  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/api/: auth.rs  mod.rs  msds.rs  reagent.rs  user.rs
src-tauri/src/common/: auth.rs  middleware.rs  mod.rs  page.rs  response.rs  result.rs  state.rs
src-tauri/src/entity/: mod.rs  prelude.rs  reagents.rs  users.rs
src/api/: auth.tsx  common.tsx  msds.api.tsx  reagent.api.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/reagent/: layout.tsx  page.tsx
src/component/: add_reagent_popover.tsx  provider.tsx
src/components/: add_reagent_popover.tsx  filter_reagent_popover.tsx  provider.tsx  upload_file_modal.tsx
src/components/header/: header.tsx
src/components/provider/: query_provider.tsx
src/constant/: common.tsx
src/lib/: utils.ts
src/schema/: auth.tsx  common.tsx  msds.schema.tsx  reagent.schema.tsx
src/store/: common.store.tsx
src/stores/: auth.store.tsx  common.store.tsx  filter.store.tsx
